--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,18 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/scout": "^10.1",
+        "laravel/socialite": "^5.6",
+        "laravel/tinker": "^2.8",
+        "socialiteproviders/vkontakte": "^5.0",
+        "socialiteproviders/yandex": "^4.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.20",
         "laravel/pint": "^1.0",
